fixes and restructuration of local data

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -26,3 +26,15 @@
 .item {
 	color:#387ef5;
 }
+
+.scroll-content {
+	background-color: #e5e5e5;
+}
+
+.b-gray {
+	background-color: #e5e5e5;
+}
+
+.font-brown {
+	color: #4B3832;
+}
