--- a/www/templates/surveys-list.html
+++ b/www/templates/surveys-list.html
@@ -1,7 +1,7 @@
 <ion-view view-title="surveys" ng-controller="surveyController">
 <ion-header-bar align-title="center" class="bar-positive">
   <div class="buttons">
-    <button class="button icon-left ion-ios-arrow-back button-clear " ng-click="goBack()">volver</button>
+    <button class="button icon-left ion-ios-arrow-back button-clear " ng-click="goBack()"></button>
   </div>
   <h1 class="title">Encuestas</h1>
 </ion-header-bar>
