--- a/www/templates/survey-volunteer-data.html
+++ b/www/templates/survey-volunteer-data.html
@@ -1,41 +1,41 @@
 <ion-view view-title="stadistics" ng-controller="volunteerDataController">
-<ion-header-bar align-title="center" class="bar-positive"> 
+<ion-header-bar align-title="center" class="bar-positive">
   <div class="buttons">
-    <button class="button icon-left ion-ios-arrow-back button-clear " ng-click="goBack()">volver</button>
-  </div> 
-  <h1 class="title">Datos del Voluntario</h1>  
+    <button class="button icon-left ion-ios-arrow-back button-clear " ng-click="goBack()"></button>
+  </div>
+  <h1 class="title">Datos del Voluntario</h1>
 </ion-header-bar>
-  <ion-content>  
+  <ion-content>
   	<div class="list card">
 	  <div class="item item-avatar">
 	    <img src="img/techo_logo.png">
 	    <h2>Bienvenido</h2>
 	    <p>Ingrese sus datos</p>
 	  </div>
-	  <div class="item item-body">	        
+	  <div class="item item-body">
 			<div>
-          <form class="css-form" novalidate name="volunteerForm">           
+          <form class="css-form" novalidate name="volunteerForm">
             <div class="list card">
               <div class="item item-divider">
               Datos del Voluntario
-              </div>              
+              </div>
               <label class="item item-input">
                 <input type="text" placeholder="Nombre Completo" ng-model="volunteer.name" name="u1Name" required>
                 <div ng-show="volunteerForm.$submitted || volunteerForm.u1Name.$touched">
                   <i class="icon ion-ios-close invalid" ng-show="volunteerForm.u1Name.$error.required"></i>
                   <i class="icon ion-ios-checkmark valid" ng-hide="volunteerForm.u1Name.$error.required"></i>
                 </div>
-              </label>              
-              <label class="item item-input">
-                <input type="tel" placeholder="Teléfono" ng-model="volunteer.phone">                
               </label>
               <label class="item item-input">
-                <input type="email" placeholder="Correo Electrónico" ng-model="volunteer.email">                
+                <input type="tel" placeholder="Teléfono" ng-model="volunteer.phone">
               </label>
-            </div>                         
+              <label class="item item-input">
+                <input type="email" placeholder="Correo Electrónico" ng-model="volunteer.email">
+              </label>
+            </div>
             </form>
-          </div>	              
-	  </div>	  	  
+          </div>
+	  </div>
 	  <a class="item item-icon-right positive" ng-click="viewSurveys(volunteerForm)">
         <i class="icon ion-ios-arrow-forward"></i>
         Iniciar
