Android scroll problem, fixed

--- a/www/templates/init.html
+++ b/www/templates/init.html
@@ -1,20 +1,20 @@
 <ion-view view-title="init">
-  <ion-content ng-controller="initController">
+  <ion-content ng-controller="initController" overflow-scroll = "true">
     <div class="list card">
         <div class="item item-reorder"><center><img src="img/techo_logo.png" alt="Techo Guatemala" class="img-responsive" height="200" width="200"><div><h2>Bienvenido/a</h2></div></center>
         <p align="center"> Alguna descripcion relevante</p>
         </div>
         <div class="item item-body" ng-click="sync()" ng-if="showList != true">
-          <center><i class="icon ion-ios-cloud-download bigger-4"></i><br/>Descargar Encuesta</center>       
+          <center><i class="icon ion-ios-cloud-download bigger-4"></i><br/>Descargar Encuesta</center>
         </div>
         <div class="row item item-body" ng-if="showList == true">
           <div class="col" ng-click="sync()">
-            <center><i class="icon ion-ios-cloud-download bigger-4"></i><br/>Descargar Encuesta</center>       
+            <center><i class="icon ion-ios-cloud-download bigger-4"></i><br/>Descargar Encuesta</center>
           </div>
           <div class="col" ng-click="viewSurveys()">
             <center><i class="icon ion-ios-list bigger-4"></i><br/>Comenzar</center>
           </div>
         </div>
-      </div>        
+      </div>
   </ion-content>
 </ion-view>
