--- a/www/templates/survey-question.html
+++ b/www/templates/survey-question.html
@@ -5,7 +5,7 @@
   	</div>
   <h1 class="title">{{section.group_name}}</h1>
 </ion-header-bar>
-  <ion-content>
+  <ion-content overflow-scroll = "true">
   	<div class="list card">
 	  <div class="item item-body">
 	    <center><p>{{question.question}} <a ng-if="question.mandatory == 'Y'">*</a></p></center>
