--- a/www/templates/survey-volunteer-data.html
+++ b/www/templates/survey-volunteer-data.html
@@ -5,7 +5,7 @@
   </div>
   <h1 class="title">Datos del Voluntario</h1>
 </ion-header-bar>
-  <ion-content>
+  <ion-content overflow-scroll = "true">
   	<div class="list card">
 	  <div class="item item-avatar">
 	    <img src="img/techo_logo.png">
@@ -30,7 +30,7 @@
                 <input type="tel" placeholder="Teléfono" ng-model="volunteer.phone">
               </label>
               <label class="item item-input">
-                <input type="email" placeholder="Correo Electrónico" ng-model="volunteer.email">
+                <input type="email" placeholder="Correo Electrónico" ng-model="volunteer.email" >                
               </label>
             </div>
             </form>
