--- a/www/css/style.css
+++ b/www/css/style.css
@@ -15,6 +15,15 @@
   height: 60px;
 }
 
+i.icon.ion-ios-checkmark.valid {
+  color: green;
+  padding-right: 5px;
+}
+
+i.icon.ion-ios-close.invalid {
+  color: red;
+  padding-right: 5px;
+}
 .spinner {
 	stroke: #0083A9;
 }
@@ -27,7 +36,7 @@
 	color:#387ef5;
 }
 
-.b-gray {
+.scroll-content {
 	background-color: #e5e5e5;
 }
 
