--- a/www/templates/survey-section.html
+++ b/www/templates/survey-section.html
@@ -2,7 +2,7 @@
 <ion-header-bar align-title="center" class="bar-positive">
   <h1 class="title">Descripción de la Sección</h1>
 </ion-header-bar>
-  <ion-content >
+  <ion-content overflow-scroll = "true">
     <div class="list card">
       <div class="item item-icon-left" >
       <i class="icon ion-ios-book-outline"></i>
