--- a/www/templates/surveys-list.html
+++ b/www/templates/surveys-list.html
@@ -5,7 +5,7 @@
   </div>
   <h1 class="title">Encuestas</h1>
 </ion-header-bar>
-  <ion-content >
+  <ion-content overflow-scroll = "true">
   	<ion-list>
   		<ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="survey in surveys | filter: search_survey" type="item-text-wrap" ng-click="viewSections({{survey}})">
   			<img ng-src="img/techo_logo.png">
