Matrix bugs fixed

--- a/www/templates/init.html
+++ b/www/templates/init.html
@@ -1,8 +1,12 @@
 <ion-view view-title="init">
   <ion-content ng-controller="initController" overflow-scroll = "true">
     <div class="list card">
-        <div class="item item-reorder"><center><img src="img/techo_logo.png" alt="Techo Guatemala" class="img-responsive" height="200" width="200"><div><h2>Bienvenido/a</h2></div></center>
-        <p align="center"> Alguna descripcion relevante</p>
+        <div class="item item-reorder">
+          <center>
+            <img src="img/techo_logo.png" alt="Techo Guatemala" class="img-responsive" height="200" width="200">
+            <div><h2>TECHO Survey Mobile System</h2></div>
+          </center>
+        <p align="center"> TECHO Guatemala</p>
         </div>
         <div class="item item-body" ng-click="sync()" ng-if="showList != true">
           <center><i class="icon ion-ios-cloud-download bigger-4"></i><br/>Descargar Encuesta</center>
