--- a/www/templates/survey-question.html
+++ b/www/templates/survey-question.html
@@ -11,7 +11,7 @@
 	    <center><p>{{question.question}} <a ng-if="question.mandatory == 'Y'">*</a></p></center>
 	  </div>
 	  <div class="item item-body">
-	  	<form class="css-form" novalidate name="answerForm" ng-if="question.type != ';'">
+	  	<form class="css-form" novalidate name="answerForm" ng-if="question.type != ';' && question.type != 'F' && question.type != 'E' && question.type != 'B' && question.type != 'A' && question.type != ':' && question.type != 'C'">
             <div class="list card">
             	<label class="item item-input" ng-if="question.type == 'D'"> <!--DATE-->
 		       		<input type="date" ng-model="question.preg">
@@ -83,7 +83,7 @@
 
 		    </div>
 			</form>
-			<div ng-if="question.type == ';'">
+			<div ng-if="question.type == ';' || question.type == ':' || question.type == 'F' || question.type == 'E' || question.type == 'B' || question.type == 'A' || question.type == 'C'">   <!-- MATRIX -->
 				<ion-list>
 					<ion-item class="item-icon-right" ng-repeat="row in question.subquestions" type="item-text-wrap" ng-click="openModal(row)" ng-if="row.scale_id == 0">
 							<p>{{row.question}}</p>
@@ -105,10 +105,10 @@
 	  <div class="buttons" ng-click="nextQuestion()" ng-if="question.mandatory == 'N' && (question.preg == '' || question.preg != '')">
 			<button class="button icon-right ion-chevron-right button-clear button-positive">Siguiente</button>
 	  </div>
-		<div class="buttons" ng-if="question.mandatory == 'Y' && (question.preg == '' && (question.type != 'M' && question.type != 'P' && question.type != ';' && question.attributes.location_mapservice != '1'))">
+		<div class="buttons" ng-if="question.mandatory == 'Y' && (question.preg == '' && (question.type != 'C' && question.type != 'M' && question.type != 'P' && question.type != 'F' && question.type != 'E'  && question.type != 'B' && question.type != 'A' && question.type != ':' && question.type != ';' && question.attributes.location_mapservice != '1'))">
 			<button class="button icon-right ion-chevron-right button-clear">Siguiente</button>
 	  </div>
-		<div class="buttons" ng-click="nextQuestion()" ng-if="question.mandatory == 'Y' && (question.preg != '' || (question.type == 'M' || question.type == 'P' || question.type == ';' || question.attributes.location_mapservice == '1'))">
+		<div class="buttons" ng-click="nextQuestion()" ng-if="question.mandatory == 'Y' && (question.preg != '' || (question.type == 'C' || question.type == 'M' || question.type == 'P' || question.type == ';' || question.type == 'F' || question.type == 'A' || question.type == ':' || question.type == 'B' || question.type == 'E' || question.attributes.location_mapservice == '1'))">
 			<button class="button icon-right ion-chevron-right button-clear button-positive">Siguiente</button>
 	  </div>
 </ion-footer-bar>
