Matrix answers fix

--- a/www/templates/row-matrix.html
+++ b/www/templates/row-matrix.html
@@ -73,9 +73,9 @@
       <div class="card" ng-if="question.type == 'E'">
         <div class="list"> <!--RADIO OPTIONS-->
           <label class="item item-radio">
-            <ion-radio ng-model="row.checked" ng-value="'aumento'">Aumento</ion-radio>
-            <ion-radio ng-model="row.checked" ng-value="'mismo'">Mismo</ion-radio>
-            <ion-radio ng-model="row.checked" ng-value="'disminucion'">Disminucion</ion-radio>
+            <ion-radio ng-model="row.checked" ng-value="'I'">Aumento</ion-radio>
+            <ion-radio ng-model="row.checked" ng-value="'S'">Mismo</ion-radio>
+            <ion-radio ng-model="row.checked" ng-value="'D'">Disminucion</ion-radio>
           </label>
         </div>
       </div>
@@ -100,7 +100,7 @@
           <label class="item item-radio">
             <ion-radio ng-model="row.checked" ng-value="'Y'" name="number">Si</ion-radio>
   				  <ion-radio ng-model="row.checked" ng-value="'N'" name="number">No</ion-radio>
-  				  <ion-radio ng-model="row.checked" ng-value="'nose'" name="number">No Se</ion-radio>
+  				  <ion-radio ng-model="row.checked" ng-value="'U'" name="number">No Se</ion-radio>
           </label>
         </div>
       </div>
