--- a/www/templates/surveys-list.html
+++ b/www/templates/surveys-list.html
@@ -14,7 +14,7 @@
   			<img ng-src="img/techo_logo.png">
   			<h2>{{survey.surveyls_title}}</h2>
   			<p>{{survey.sid}} - {{surveyls_description}}</p>
-        <i class="icon ion-ios-arrow-right icon-accessory"></i>
+        <i class="icon ion-ios-compose bigger-22"></i>        
         <ion-option-button class="button-calm ion-ios-cloud-upload bigger-2" ng-click="sendData({{survey.sid}})"></ion-option-button>
   		</ion-item>
   	</ion-list>
