--- a/www/templates/survey-question.html
+++ b/www/templates/survey-question.html
@@ -4,8 +4,16 @@
     	<button class="button icon-left ion-ios-arrow-back button-clear " ng-click="goBack()"></button>
   	</div>
   <h1 class="title">{{section.group_name}}</h1>
+
 </ion-header-bar>
-  <ion-content overflow-scroll = "true" has-header="true" has-footer="false" padding="false">
+<div class="bar bar-subheader">
+  <h2 class="title"></h2>
+	<div class="buttons">
+    	<button class="button icon-left ion-ios-help-outline button-clear " ng-if="question.help == ''"></button>
+    	<button class="button icon-left ion-ios-help button-clear " ng-if="question.help != ''" ng-click="showAlert(question.help)"></button>
+  	</div>
+</div>
+  <ion-content class="has-subheader" overflow-scroll = "true" has-header="true" has-footer="false" padding="false">
   	<div class="list card">
 	  <div class="item item-body">
 	    <center><p>{{question.question}} <a ng-if="question.mandatory == 'Y'">*</a></p></center>
